--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group = 'org.simonscode'
-version = '1.0'
+version = '1.0.1'
 
 buildscript {
     ext.kotlin_version = '1.1.51'
@@ -34,6 +34,8 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.15'
 }
 
 compileKotlin {
