--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-group = 'org.simonscode'
-version = '1.2'
+group 'org.simonscode'
+version '1.2.1'
 
 buildscript {
     ext.kotlin_version = '1.1.51'
