Rewrite in java to become version 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-.gradle/
-.idea/
-NanoUpdater.iml
+/.gradle/
+/.idea/
+*.iml
+*.ipr
+*.iws
 *.jar
-build/
-out/
-config.json
+/build/
+/out/
+/test/
+*.json
