--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,15 @@
 group 'org.simonscode'
-version '1.2.2'
-
-buildscript {
-    ext.kotlin_version = '1.1.51'
-
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-
-    dependencies {
-        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: kotlin_version
-        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
-    }
-}
+version '2.0'
 
 apply plugin: 'idea'
 apply plugin: 'java'
-apply plugin: 'kotlin'
 apply plugin: 'application'
-apply plugin: 'com.github.johnrengelman.shadow'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
     compile group: 'org.apache.tika', name: 'tika-bundle', version: '1.16'
@@ -34,19 +17,12 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
-    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.15'
+//    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.15'
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-shadowJar {
-    mainClassName = 'org.simonscode.nanoupdater.NanoUpdaterKt'
-    baseName = 'NanoUpdater'
-    destinationDir = new File("./")
+jar {
+    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
+    mainClassName = 'org.simonscode.nanowrimotracker.NaNoWriMoTracker'
+    baseName = 'NaNoWriMoTracker'
+    destinationDir = new File("./releases/")
 }
