--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
 //    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.15'
+    compile group: 'com.intellij', name: 'forms_rt', version: '7.0.3'
 }
 
 jar {
