--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
     compile group: 'org.apache.tika', name: 'tika-bundle', version: '1.16'
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-    compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
-//    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.15'
+    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.5.2'
     compile group: 'com.intellij', name: 'forms_rt', version: '7.0.3'
 }
 
